syntax = "proto3";

import "google/protobuf/timestamp.proto";

service CommentProto {
  rpc getComments(EmptyComment) returns (GetCommentsResponseDto);
  rpc getComment(CommentId) returns (Comment);
  rpc createComment(CreateCommentDto) returns (Comment);
  rpc updateComment(UpdateCommentDto) returns (Comment);
  rpc deleteComment(CommentId) returns (DeleteCommentResponseDto);
} 

message GetCommentsResponseDto {
  repeated Comment comments = 1;
}

message DeleteCommentResponseDto {
  bool success = 1;
}

message EmptyComment {}

message CommentId {
  int32 id = 1;
}

message UpdateCommentDto {
  int32 id = 1;
  int32 authorId = 2;
  string message = 3;
  string attachment = 4;
  int32 postId = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message CreateCommentDto {
  int32 authorId = 2;
  string message = 3;
  string attachment = 4;
  int32 postId = 5;
}

message Comment {
  int32 id = 1;
  int32 authorId = 2;
  string message = 3;
  string attachment = 4;
  int32 postId = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}
