syntax = "proto3";

import "google/protobuf/timestamp.proto";

service PostProto {
  rpc getPosts(EmptyPost) returns (GetPostsResponseDto);
  rpc getPost(PostId) returns (Post);
  rpc createPost(CreatePostDto) returns (Post);
  rpc updatePost(UpdatePostDto) returns (Post);
  rpc deletePost(PostId) returns (DeletePostResponseDto);
}

message GetPostsResponseDto {
  repeated Post posts = 1;
}

message DeletePostResponseDto {
  bool success = 1;
}

message EmptyPost {}

message PostId {
  string id = 1;
}

message UpdatePostDto {
  string id = 1;
  string authorId = 2;
  string message = 3;
  string attachment = 4;
  repeated CommentDto comments = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message CreatePostDto {
  string authorId = 1;
  string message = 2;
  string attachment = 3;
}

message Post {
  string id = 1;
  string authorId = 2;
  string message = 3;
  string attachment = 4;
  repeated CommentDto comments = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message CommentDto {
  string id = 1;
  string authorId = 2;
  string message = 3;
  string attachment = 4;
  string postId = 5;
}
  